# VidMergeBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  config.env  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  pre-commit-autoupdate.yml  release.yml  update-docker-readme.yml
setup/: ffmpeg-setup.sh
vidmergebot/: __init__.py  __main__.py  bot_class.py  vars.py
vidmergebot/db/: __init__.py  mongo.py
vidmergebot/plugins/: __init__.py  broadcast.py  callback_queries.py  start.py  vidmerger.py
vidmergebot/utils/: caching.py  constants.py  display_progress.py  ikb.py  joinCheck.py  upload_utils.py  vid_utils.py
