[tool.poetry]
name = "vidmergebot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
aiodns = "^3.0.0"
aiohttp = "^3.8.5"
hachoir = "^3.2.0"
humanfriendly = "^10.0"
Pillow = "^9.5.0"
cachetools = "^5.3.1"
pymongo = "^4.5.0"
dnspython = "^2.4.2"
aiofiles = "^23.2.1"
prettyconf = "^2.2.1"
pyromod = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pylint = "^2.17.5"
pre-commit = "^3.4.0"
pyclean = "^2.7.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
