[tool.poetry]
name = "vidmergebot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
aiodns = "^3.1.1"
aiohttp = "^3.10.11"
hachoir = "^3.3.0"
humanfriendly = "^10.0"
Pillow = "^10.2.0"
cachetools = "^5.3.2"
pymongo = "^4.6.1"
dnspython = "^2.5.0"
aiofiles = "^23.2.1"
prettyconf = "^2.2.1"
pyromod = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pylint = "^3.0.2"
pre-commit = "^3.6.0"
pyclean = "^2.7.6"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
